// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Add Todo Default Add Todo 1`] = `
<div
  className="add-todo"
>
  <div
    className="add-todo-icon"
  />
  <input
    className="add-todo-input"
    onKeyPress={[Function]}
    placeholder="Add a new todo..."
  />
</div>
`;

exports[`Storyshots App Default Layout 1`] = `
<div
  className="App"
>
  <div
    className="add-todo"
  >
    <div
      className="add-todo-icon"
    />
    <input
      className="add-todo-input"
      onKeyPress={[Function]}
      placeholder="Add a new todo..."
    />
  </div>
</div>
`;

exports[`Storyshots App List Todos Layout 1`] = `
<div
  className="App"
>
  <div
    className="add-todo"
  >
    <div
      className="add-todo-icon"
    />
    <input
      className="add-todo-input"
      onKeyPress={[Function]}
      placeholder="Add a new todo..."
    />
  </div>
  <div
    className="todo-item"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 fa-sm "
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span
      className="todo-description"
    >
      First todo
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-trash fa-w-14 fa-sm "
      data-icon="trash"
      data-prefix="fas"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="todo-item"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 fa-sm "
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span
      className="todo-description"
    >
      2nd todo
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-trash fa-w-14 fa-sm "
      data-icon="trash"
      data-prefix="fas"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Todo Item Checked Todo 1`] = `
<div
  className="todo-item"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-check-circle fa-w-16 fa-sm "
    data-icon="check-circle"
    data-prefix="far"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <span
    className="todo-description"
  >
    Checked Todo
  </span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-trash fa-w-14 fa-sm "
    data-icon="trash"
    data-prefix="fas"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Todo Item Default Todo 1`] = `
<div
  className="todo-item"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle fa-w-16 fa-sm "
    data-icon="circle"
    data-prefix="far"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <span
    className="todo-description"
  >
    Default Todo
  </span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-trash fa-w-14 fa-sm "
    data-icon="trash"
    data-prefix="fas"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Todo Item Editing Todo 1`] = `
<div
  className="todo-item todo-edit"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle fa-w-16 fa-sm "
    data-icon="circle"
    data-prefix="far"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <input
    className="edit-todo-input"
    defaultValue="Editing Todo"
    onInput={[Function]}
    onKeyPress={[Function]}
  />
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-ban fa-w-16 fa-sm "
    data-icon="ban"
    data-prefix="fas"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119.034 8 8 119.033 8 256s111.034 248 248 248 248-111.034 248-248S392.967 8 256 8zm130.108 117.892c65.448 65.448 70 165.481 20.677 235.637L150.47 105.216c70.204-49.356 170.226-44.735 235.638 20.676zM125.892 386.108c-65.448-65.448-70-165.481-20.677-235.637L361.53 406.784c-70.203 49.356-170.226 44.736-235.638-20.676z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Todo Item Editing Uncommitted Todo 1`] = `
<div
  className="todo-item todo-edit"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle fa-w-16 fa-sm "
    data-icon="circle"
    data-prefix="far"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <input
    className="edit-todo-input"
    defaultValue="Uncommitted edit..."
    onInput={[Function]}
    onKeyPress={[Function]}
  />
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-ban fa-w-16 fa-sm "
    data-icon="ban"
    data-prefix="fas"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119.034 8 8 119.033 8 256s111.034 248 248 248 248-111.034 248-248S392.967 8 256 8zm130.108 117.892c65.448 65.448 70 165.481 20.677 235.637L150.47 105.216c70.204-49.356 170.226-44.735 235.638 20.676zM125.892 386.108c-65.448-65.448-70-165.481-20.677-235.637L361.53 406.784c-70.203 49.356-170.226 44.736-235.638-20.676z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Todo Item Uncommitted Edit Todo 1`] = `
<div
  className="todo-item"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle fa-w-16 fa-sm "
    data-icon="circle"
    data-prefix="far"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <span
    className="todo-description"
  >
    Uncommitted Edit Todo
  </span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-trash fa-w-14 fa-sm "
    data-icon="trash"
    data-prefix="fas"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <svg
    aria-labelledby="svg-inline--fa-title-vvvvvvvvvvvv"
    className="svg-inline--fa fa-exclamation-triangle fa-w-18 fa-xs "
    data-icon="exclamation-triangle"
    data-prefix="fas"
    role="img"
    style={Object {}}
    viewBox="0 0 576 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="svg-inline--fa-title-vvvvvvvvvvvv"
      style={Object {}}
    >
      Uncommitted edit: Uncommitted edit...
    </title>
    <path
      d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;
